--- a/public/stylesheets/user/userprofile.css
+++ b/public/stylesheets/user/userprofile.css
@@ -1,3 +1,6 @@
+html{
+    font-size: 80%;
+}
 body {
     background-color: rgb(255, 255, 255);
 }
@@ -39,8 +42,8 @@ body {
 .quote {
     margin: 2rem 1rem;
     text-align: center;
-    font-family: "Rye", cursive;
-    font-size: 2.4rem;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.4rem;
 }
 
 .my-program {
