--- a/views/layouts/engClubBoilerplate.ejs
+++ b/views/layouts/engClubBoilerplate.ejs
@@ -37,7 +37,7 @@
       tt = display_c();
     }
   </script>
-  <title>Afro house of Knowledge</title>
+  <title>Afro Language Lab</title>
 </head>
 
 <body onload="display_ct();">
