--- a/views/programs/englishlang4all/englishClubs/board_members_dashboard.ejs
+++ b/views/programs/englishlang4all/englishClubs/board_members_dashboard.ejs
@@ -2,11 +2,14 @@
 <!-- WORD Processor-->
 <script src="https://cdn.tiny.cloud/1/p06f8vxdpje8xosyvnq48z68vc7n479iauh5s2jk9zx30qg2/tinymce/5/tinymce.min.js"
   referrerpolicy="origin"></script>
-</script>
 <script>
   tinymce.init({
     selector: '.mytextarea',
-    height: 300,
+    height: 200,
+    relative_urls: false,
+    remove_script_host: false,
+    toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+    plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
     max_width: 500,
     min_height: 300,
     min_width: 400
