acceptable added to grading

--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -112,7 +112,7 @@
           </a>
           <ul class="dropdown-menu mx-2" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" href="/englishlang4all/clubs/home">Natural English Clubs</a>
+              <a class="dropdown-item" href="/englishlang4all/clubs/Burkina-Faso/hubs">Natural English Clubs</a>
             </li>
             <li>
               <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
@@ -325,14 +325,13 @@
                     <h4 id="image-caption" class="customer-fullname">
                       Auguste KABORE <span class="customer-job ms-2">Étudiant en Commerce Internationale</span>
                     </h4>
-                    
                     <hr />
                     <h4 class="customer-paragraph-1 py-3">
                       C’est tout juste waouh !!!
                     </h4>
                     <p>
-                      J'ai beaucoup progressé en anglais avec le centre AfroHK, car ils utilisent une
-                      méthodologie d'apprentissage tres efficace. Une formation pratique qui m'a
+                      J'ai beaucoup progressé en anglais avec le centre Afro Language Lab, car ils utilisent une
+                      méthodologie d'apprentissage tres éfficace. Une formation pratique qui m'a
                       permis de beaucoup comprendre les bases et les fondements de l'Anglais et je
                       m'exprime mieux maintenant.
                     </p>
