--- a/views/programs/englishlang4all/englishClubs/grading/englishClubGradeForm.ejs
+++ b/views/programs/englishlang4all/englishClubs/grading/englishClubGradeForm.ejs
@@ -82,6 +82,7 @@
                         <label class="form-label my-3" for="structure">Structure</label>
                         <select class="form-select" name="grade[structure]" aria-label="Default select example">
                             <option selected value="Not Sufficient">Not Sufficient</option>
+                            <option value="Acceptable">Acceptable</option>
                             <option value="Sufficient">Sufficient</option>
                             <option value="Good">Good</option>
                             <option value="Very Good">Very Good</option>
@@ -94,6 +95,7 @@
                         <label class="form-label my-3" for="pronunciation">Pronunciation</label>
                         <select class="form-select" name="grade[pronunciation]" aria-label="Default select example">
                             <option selected value="Not Sufficient">Not Sufficient</option>
+                            <option value="Acceptable">Acceptable</option>
                             <option value="Sufficient">Sufficient</option>
                             <option value="Good">Good</option>
                             <option value="Very Good">Very Good</option>
@@ -104,9 +106,9 @@
                     <!-- Fluency -->
                     <div class="col-md-6">
                         <label class="form-label my-3" for="fluency">Fluency</label>
-
                         <select class="form-select" name="grade[fluency]" aria-label="Default select example">
                             <option selected value="Not Sufficient">Not Sufficient</option>
+                            <option value="Acceptable">Acceptable</option>
                             <option value="Sufficient">Sufficient</option>
                             <option value="Good">Good</option>
                             <option value="Very Good">Very Good</option>
@@ -117,9 +119,9 @@
                     <!-- Vocabulary -->
                     <div class="col-md-6">
                         <label class="form-label my-3" for="vocabulary">Vocabulary</label>
-
                         <select class="form-select" name="grade[vocabulary]" aria-label="Default select example">
                             <option selected value="Not Sufficient">Not Sufficient</option>
+                            <option value="Acceptable">Acceptable</option>
                             <option value="Sufficient">Sufficient</option>
                             <option value="Good">Good</option>
                             <option value="Very Good">Very Good</option>
@@ -130,9 +132,9 @@
                     <!-- comprehension -->
                     <div class="col-md-6">
                         <label class="form-label my-3" for="comprehension">Comprehension</label>
-
                         <select class="form-select" name="grade[comprehension]" aria-label="Default select example">
                             <option selected value="Not Sufficient">Not Sufficient</option>
+                            <option value="Acceptable">Acceptable</option>
                             <option value="Sufficient">Sufficient</option>
                             <option value="Good">Good</option>
                             <option value="Very Good">Very Good</option>
@@ -143,9 +145,9 @@
                     <!-- interaction -->
                     <div class="col-md-6">
                         <label class="form-label my-3" for="interaction">Interaction</label>
-
                         <select class="form-select" name="grade[interaction]" aria-label="Default select example">
                             <option selected value="Not Sufficient">Not Sufficient</option>
+                            <option value="Acceptable">Acceptable</option>
                             <option value="Sufficient">Sufficient</option>
                             <option value="Good">Good</option>
                             <option value="Very Good">Very Good</option>
@@ -162,7 +164,7 @@
                 <!-- Testee feedback -->
                 <textarea type="text" class="form-control mytextarea"
                     placeholder="What are the Strenghs and Weaknesses of the testee ?  What are your recommendations for continuous improvement "
-                    name="grade[feedback]" value="" id="feedback"></textarea>
+                    name="grade[feedback]" value="" required id="feedback"></textarea>
             </div>
 
             <button type="submit" class="btn mb-5 btn-lg btn-primary"> Submit Grade </button>
