--- a/views/programs/pecp/home.ejs
+++ b/views/programs/pecp/home.ejs
@@ -93,8 +93,8 @@
                 </button>
 
                 <button id="" class="bg-white">
-                  <a id="" class="fs-5" href=" tel: +22653344444">
-                    <i class="fa p-3 mx-2 fa-phone" aria-hidden="true"></i><span>+226 53344444</span>
+                  <a id="" class="fs-5" href=" tel: +22664350101">
+                    <i class="fa p-3 mx-2 fa-phone" aria-hidden="true"></i><span>(226) 64350101</span>
                   </a>
                 </button>
 
