--- a/public/stylesheets/englishforAll/englishClubs/home.css
+++ b/public/stylesheets/englishforAll/englishClubs/home.css
@@ -62,6 +62,14 @@ body {
   background-color: rgb(57, 7, 165);
 }
 
+.eng-club-details {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 10px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  /* background-color: rgb(253, 253, 253); */
+  padding: 0;
+  border-radius: 5px;
+  border: 3px solid rgb(3, 143, 36);
+  /* width: 100%; */
+}
 .eng-club-details:hover {
   border: 1px solid rgb(60, 117, 238);
 }
@@ -78,14 +86,7 @@ body {
   font-weight: 600;
 }
 
-.eng-club-details {
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 10px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  /* background-color: rgb(253, 253, 253); */
-  padding: 0;
-  border-radius: 5px;
-  border: 3px solid rgb(3, 143, 36);
-  /* width: 100%; */
-}
+
 
 
 .afrohk-club-details {
@@ -93,7 +94,7 @@ body {
   /* background-color: rgb(253, 253, 253); */
   padding: 0;
   border-radius: 5px;
-  border: 3px solid rgb(3, 85, 143);
+  border: 1px solid rgb(197, 208, 215);
   /* width: 100%; */
 }
 
@@ -114,8 +115,8 @@ body {
 .eng-club-name {
   font-size: 1.2rem;
   font-family: "Chivo", sans-serif;
-  font-weight: 700;
-  color: rgba(2, 119, 31, 0.719);
+  font-weight: 400;
+  color: rgba(12, 2, 119, 0.719);
 }
 
 .institution {
@@ -127,10 +128,11 @@ body {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
-  padding: 1rem 1rem;
+  padding: 1.4rem 1rem;
   font-family: "Chivo", sans-serif;
-  font-weight: 900;
-  font-size: 1.6rem;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+  font-size: 1.3rem;
   text-align: center;
   color: rgba(24, 23, 23, 0.801);
 }
