--- a/views/programs/englishlang4all/englishClubs/showClubHub.ejs
+++ b/views/programs/englishlang4all/englishClubs/showClubHub.ejs
@@ -61,6 +61,7 @@
     background-color: #185a9d;
   }
 
+ 
 
   @media (max-width: 1200px) {
     .type-of-club {
@@ -211,18 +212,20 @@
     <!-- Special English Club -->
     <div class="container clubs-card ">
       <h4 class="type-of-club afrohk-club">Special English Clubs </h4>
-      <p class="fst-italic my-3 px-2 text-primary fs-6 ">Les clubs spéciaux sont mises en place par AfroHK pour atteindre des objectifs spécifiques bien définis </p>
+      <p class="fst-italic my-3 px-2 text-primary fs-6 ">Les clubs spéciaux sont mises en place par ALL pour atteindre des objectifs spécifiques bien définis </p>
   <div class="row pb-5">
   <% for(let Club of hub.clubs.Simple){%>
           <div class="col-md-6 col-lg-4 my-3">
             <div class="eng-club-details afrohk-club-details pb-3">
-              <h2 class="institution inst-afrohk"><%= Club.instituition %></h2>
+              <h2 class="institution inst-afrohk"><%= Club.name %></h2>
               <div class="eng-clubs-description">
-                <h3 class="eng-club-name"><%= Club.name %></h3>
+                <h3 class="eng-club-name">By <%= Club.instituition %></h3>
                 <p class="definition"></p>
-                <p class="found-date inline-block me-3">Since <%= Club.foundDate %></p> <a class="inline-block"
+                <div class="d-flex justify-content-between">
+                <p class="found-date inline-block me-3">Since <%= Club.foundDate %></p> <p><a class="inline-block button-7"
                     href="/englishlang4all/clubs/<%= hub.cityName %>/hub/<%= hub._id%>/club/<%= Club.id%>/home">Learn
-                    more</a>
+                    more</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -238,9 +241,9 @@
          <% for(let Club of hub.clubs.High_school){%>
           <div class="col-md-6 col-lg-4 my-5">
             <div class="eng-club-details">
-              <h2 class="institution"><%= Club.instituition %></h2>
+              <h2 class="institution"><%= Club.name %></h2>
               <div class="eng-clubs-description">
-                <h3 class="eng-club-name"><%= Club.name %></h3>
+                <h3 class="eng-club-name">By <%= Club.instituition %></h3>
                 <p class="definition"></p>
                 <p class="found-date">Since <%= Club.foundDate %> <a class="ms-4"
                     href="/englishlang4all/clubs/<%= hub.cityName %>/hub/<%= hub._id%>/club/<%= Club.id%>/home">Learn
@@ -261,9 +264,9 @@
           <% for(let Club of hub.clubs.University){%>
           <div class="col-md-6 col-lg-4 my-5">
             <div class="eng-club-details">
-              <h2 class="institution"><%= Club.instituition %></h2>
+              <h2 class="institution"><%= Club.name %></h2>
               <div class="eng-clubs-description">
-                <h3 class="eng-club-name"><%= Club.name %></h3>
+                <h3 class="eng-club-name"><%= Club.instituition %></h3>
                 <p class="definition"></p>
                 <p class="found-date">Since <%= Club.foundDate %> <a class="ms-4"
                     href="/englishlang4all/clubs/<%= hub.cityName %>/hub/<%= hub._id%>/club/<%= Club.id%>/home">Learn
@@ -284,9 +287,9 @@
          <% for(let Club of hub.clubs.Company){%>
           <div class="col-md-6 col-lg-4 my-5">
             <div class="eng-club-details">
-              <h2 class="institution"><%= Club.instituition %></h2>
+              <h2 class="institution"><%= Club.name %></h2>
               <div class="eng-clubs-description">
-                <h3 class="eng-club-name"><%= Club.name %></h3>
+                <h3 class="eng-club-name"><%= Club.instituition %></h3>
                 <p class="definition"></p>
                 <p class="found-date">Since <%= Club.foundDate %> <a class="ms-4"
                     href="/englishlang4all/clubs/<%= hub.cityName %>/hub/<%= hub._id%>/club/<%= Club.id%>/home">Learn
@@ -306,9 +309,9 @@
        <% for(let Club of hub.clubs.Professional){%>
           <div class="col-md-6 col-lg-4 my-5">
             <div class="eng-club-details">
-              <h2 class="institution"><%= Club.instituition %></h2>
+              <h2 class="institution"><%= Club.name %></h2>
               <div class="eng-clubs-description">
-                <h3 class="eng-club-name"><%= Club.name %></h3>
+                <h3 class="eng-club-name"><%= Club.instituition %></h3>
                 <p class="definition"></p>
                 <p class="found-date">Since <%= Club.foundDate %> <a class="ms-4"
                     href="/englishlang4all/clubs/<%= hub.cityName %>/hub/<%= hub._id%>/club/<%= Club.id%>/home">Learn
