--- a/views/programs/pecp/home.ejs
+++ b/views/programs/pecp/home.ejs
@@ -285,7 +285,8 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section>
+<!-- End Why Us Section -->
 
 <section id="tarifs" class="">
   <div class="section-title container py-5">
@@ -296,6 +297,8 @@
    <div class="modal-body pricing-wrapper">
     <div class="container">
       <div class="grid">
+
+      <!-- Conversation courante  -->
         <div class="card">
           <h2 class="card_title">Conversation Courante</h2>
           <p class="pricing">30.000 Fcfa<span class="small">/par mois</span></p>
@@ -315,6 +318,8 @@
           </ul>
           <!-- <a href="#" class="cta_btn">Buy Now</a> -->
         </div>
+
+      <!-- Conversation technique -->
         <div class="card">
           <h2 class="card_title"> Conversation Technique </h2>
           <p class="pricing">45.000 Fcfa<span class="small">/mois</span></p>
@@ -335,6 +340,8 @@
             <li>Préparation à l'interview d'embauche </li>
           </ul>
         </div>
+
+      <!-- Conversation totale -->
         <div class="card">
           <h2 class="card_title">Conversation Totale</h2>
           <p class="pricing">60.000 Fcfa<span class="small">/mois</span></p>
@@ -346,15 +353,16 @@
           <ul class="features">
             <li>Anglais Général et Technique</li>
             <li>Accès au cours en ligne</li>
-            <li>4 Séances de cours / semaine</li>
+            <li>3 Séances de cours / semaine</li>
             <!-- <li>Accès au cours en ligne</li> -->
-            <li>4 Séances de conversation / semaine</li>
+            <li>3 Séances de conversation / semaine</li>
             <hr>
             <p class="fst-italic">Bonus</p>
             <li>Cv traduit en Anglais</li>
             <li>Préparation à l'interview d'embauche </li>
           </ul>
         </div>
+
       </div>
     </div>
   </div>
