student guide removed

--- a/views/programs/pecp/myPecpSpace.ejs
+++ b/views/programs/pecp/myPecpSpace.ejs
@@ -198,11 +198,12 @@
 
 
   <div class="container  mb-5 d-flex flex-column align-items-center">
-    <!-- Button trigger modal -->
+    <!-- Button trigger modal 
     <a type="button" class="btn btn-success"
       href="https://drive.google.com/file/d/1hwTWJumD3ncuNh1QqZx_659T4K01nMtJ/view?usp=share_link" target="_blank">
       Guide de l'apprenant (PECP)
     </a>
+    -->
   </div>
 
   <!-- My courses -->
