course module ui

--- a/views/courses/course_modules/showModule.ejs
+++ b/views/courses/course_modules/showModule.ejs
@@ -59,7 +59,7 @@
 
   <!-- <% if(moduleReveal) { %> -->
   <!-- Module content -->
-  <section class="container col-md-8">
+  <section class="container col-md-8 col-lg-6">
     <!-- Objectif et structuration du module-->
    
     <!-- Explication supplementaire-->
@@ -116,7 +116,7 @@
     <div class="video-wrapper" style="">
 
       <h3 class="course-video-heading">
-        <span class="underline-section">Contenu en vidéos du module</span>
+        <span class="underline-section">Cours en vidéos du module</span>
       </h3>
       <div class="d-flex flex-column justify-content-around align-items-center my-3">
         <% for (video of courseModule.videoLinks) {%>
@@ -170,7 +170,7 @@
 
     <div class="my-5">
       <h3 class="about-course-heading rok">
-        <span class="underline-section"> Retour de Connaissance </span>
+        <span class="underline-section"> Renforcement de la comprehension </span>
       </h3>
       <div class="assignment-wrapper">
         <div class="row">
